<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background = '@color/darker_white'
    android:gravity="center"
    tools:context=".MainSwipingScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/profile_button"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_capsule"
            android:text="Profile"
            android:textColor="@drawable/text_selector"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="447dp" />

        <Button
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="View Notifications"
            android:background="@drawable/shape_capsule"
            android:textColor="@drawable/text_selector"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/book_content"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/searchFilter"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:visibility="visible"
            android:gravity="center_horizontal"
            android:hint="Filter by Genre, Author, etc!"
            />

        <Button
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:background="@drawable/shape_capsule"
            android:textColor="@drawable/text_selector"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop ="50dp"
            android:src="@drawable/book" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Title"
            android:textSize="32dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
            android:id="@+id/for_sale_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="For Sale!"
            android:textSize="32dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
            android:id="@+id/author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="-20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="22dp"
            android:text="Author"

            app:layout_constraintTop_toBottomOf="@+id/title_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/like_button"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_capsule"
            android:text="@string/like_book_button"
            android:textColor="@drawable/text_selector"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="447dp" />

        <Button
            android:id="@+id/dislike_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/shape_capsule"
            android:text="@string/dislike_book_button"
            android:textColor="@drawable/text_selector" />


    </LinearLayout>

</LinearLayout>