<resources>
    <string name="app_name">Kindlr</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_post_book">PostBookActivity</string>
    <string name="title_activity_main_swiping_screen">MainSwipingScreenActivity</string>
    <string name="title_activity_view_exchange">ViewExchangeActivity</string>
    <string name="title_activity_view_notifications">ViewNotificationsActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string name="like_book_button">Like</string>
    <string name="dislike_book_button">Dislike</string>

    <!-- Strings related to posting a book -->
    <string name="prompt_title">Title</string>
    <string-array name="states">
        <item>CA</item>
        <item>MO</item>
        <item>WA</item>
    </string-array>
    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <item type="id" name="view_notification_1"/>
    <item type="id" name="view_notification_2"/>
    <item type="id" name="view_notification_3"/>
</resources>
