...
            android:text="Edit Profile"
            android:layout_weight="1"
            android:background="@drawable/shape_capsule"
            android:textColor="@drawable/text_selector"/>

        <Button
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Out"
            android:layout_weight="1"
            android:background="@drawable/shape_capsule"
            android:textColor="@drawable/text_selector"/>
...
